@@ -1,3 +1,14 @@
+2006-03-11  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* kaffe/kaffevm/thread.c
+	(startThread, startSpecialThread, createDaemon, firstStartThread):
+	Secured KSEM(get) calls against interruption.
+
+	* kaffe/kaffevm/locks.c
+	(getHeavyLock): Optimized the number of increments/decrements.
+	(slowLockMutex): Secure the call to KSEM(get) against
+	interruption.
+	
 2006-03-09  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/thread.c (linkNativeAndJavaThread),
